Resolved issue with non-responsive design on mobile devices

--- a/assets/css/code_mirror.css
+++ b/assets/css/code_mirror.css
@@ -1,6 +1,6 @@
 .CodeMirror {
   width: 100%;
-  height: 300px!important;
+  height: 340px!important;
   font-size: 16px;
   border: solid 2px #00ff00;
   border-radius: 20px;
